@@ -15,6 +15,8 @@ $Id$
 6.5.0 Beta 5
 ============
 
+* [DanielPharos]: Added FTX file loading and saving support (Heavy Metal: F.A.K.K. 2 textures).
+
 * [cdunde]: Setup function to reset Skin-view.
 
 * [cdunde]: Changed Quake 2 "TextureFormat" to save .md2 model skin textures as .pcx proper format.
